syntax = "proto3";

option csharp_namespace = "UserService.GrpcServer";

package user;

service UserService{
  rpc GetUserEmailById (UserRequest) returns (UserReply);
}

message UserRequest {
  string userId = 1;
}

message UserReply {
  string email = 1;
}
